# Warcaby

./: CMakeLists.txt  LICENSE  Makefile  README.md
inc/ai/: AIPlayer.hpp
inc/game/: Game.hpp
inc/game/board/: Board.hpp  BoardConst.hpp  Square.hpp  VirtualBoard.hpp
inc/game/checker/: Checker.hpp  CheckerKing.hpp  CheckerMan.hpp
inc/game/player/: Player.hpp  PlayerMove.hpp  PlayerMoveSequence.hpp  VirtualPlayerMoveSequence.hpp
inc/graphics/: GameWrapper.hpp  HumanPlayer.hpp  MainWindow.hpp
inc/graphics/overlay/: GameEndOverlay.hpp  MainMenuOverlay.hpp  MenuOverlay.hpp  Overlay.hpp  PauseButtonOverlay.hpp  PauseMenuOverlay.hpp
inc/graphics/primitives/: Animation.hpp  Animator.hpp  PrioritySettings.hpp  PropertyAnimation.hpp  Renderable.hpp  Renderer.hpp  Updatable.hpp  Updater.hpp
inc/graphics/rendering/: Camera.hpp  PostProcessor.hpp  ShaderProvider.hpp
inc/graphics/scene/: BoardRenderable.hpp  CheckerRenderable.hpp  Environment.hpp
resources/fonts/: DMMono-Regular-56.fnt
resources/models/: checker.gltf
resources/shaders/: base.vs  board.fs  checker.fs  post.fs
src/: main.cpp
src/ai/: AIPlayer.cpp
src/game/: Game.cpp
src/game/board/: Board.cpp  Board_template.cpp  Square.cpp  VirtualBoard.cpp
src/game/checker/: Checker.cpp  CheckerKing.cpp  CheckerMan.cpp
src/game/player/: Player.cpp  PlayerMove.cpp  PlayerMoveSequence.cpp  VirtualPlayerMoveSequence.cpp
src/graphics/: GameWrapper.cpp  HumanPlayer.cpp  MainWindow.cpp
src/graphics/overlay/: GameEndOverlay.cpp  MainMenuOverlay.cpp  MenuOverlay.cpp  Overlay.cpp  PauseButtonOverlay.cpp  (+1 more)
(+13 files in other folders)
